# IARIS-A

./: BUILD_EXE_GUIDE.md  BUILD_QUICK_REFERENCE.md  DEPLOYMENT_CHECKLIST.md  GETTING_STARTED.md  LICENSE  README.md  app_content.txt  blocks.txt  build_diagnostics.py  build_exe.bat  build_exe.ps1  build_exe.py  extract.py  iaris_engine.py  iaris_engine.spec  package-lock.json  parse.py  patch.py  patch2.py  patch3.py  patch4.py  patch5.py  patch6.py  patch_app.py  patch_ui.py  pyproject.toml  requirements.txt
.planning/: STATE.md  config.json
frontend/: package-lock.json  package.json
frontend/electron/: main.js
frontend/src/: App.jsx  App.jsx.backup  TuningPanel.jsx  index.css
iaris/: __init__.py  api.py  classifier.py  cli.py  engine.py  knowledge.py  models.py  monitor.py  package-lock.json  scorer.py  simulator.py  tui.py  workload.py
iaris/recipes/: defaults.json
